--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="x2n-7T-ygG">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -239,7 +239,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="Pl5-6d-prL" kind="show" id="hlX-HZ-rKM"/>
+                                                    <segue destination="yQ1-wX-30r" kind="show" id="qBN-fh-Ha0"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -267,20 +267,13 @@
             </objects>
             <point key="canvasLocation" x="-2826.4000000000001" y="-0.44977511244377816"/>
         </scene>
-        <!--Buisness Login-->
-        <scene sceneID="fx3-sU-Dl2">
+        <!--BusinessLogin-->
+        <scene sceneID="qWV-Nb-IQ7">
             <objects>
-                <viewController title="Buisness Login" id="Pl5-6d-prL" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YVe-A5-JZg">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="ItH-WY-WmG"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VOi-eJ-HUa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Business" referencedIdentifier="BusinessLogin" id="yQ1-wX-30r" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0HC-n7-z7v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2826" y="1160"/>
+            <point key="canvasLocation" x="-2826" y="487"/>
         </scene>
         <!--Customer Register-->
         <scene sceneID="mJ3-tF-e5s">
@@ -1032,7 +1025,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oMi-Ri-kbT" userLabel="Cell Content Right">
-                                                    <rect key="frame" x="266.66666666666669" y="32" width="52.333333333333314" height="19.666666666666671"/>
+                                                    <rect key="frame" x="266.66666666666674" y="32" width="52.333333333333314" height="19.666666666666671"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="£00.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fg1-OI-wy8">
                                                             <rect key="frame" x="0.0" y="0.0" width="52.333333333333336" height="19.666666666666668"/>
@@ -1047,7 +1040,7 @@
                                                     </constraints>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yog-FF-oe9" userLabel="Cell Content Left">
-                                                    <rect key="frame" x="15.000000000000007" y="14.999999999999996" width="116.66666666666669" height="52.666666666666657"/>
+                                                    <rect key="frame" x="15" y="15" width="116.66666666666669" height="52.666666666666657"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Cappucchino" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6db-2P-r1H" userLabel="Item">
                                                             <rect key="frame" x="0.0" y="0.0" width="116.66666666666667" height="24.333333333333332"/>
