coffee basket on view menu

--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -691,7 +691,6 @@
         <!--Order-->
         <scene sceneID="FVQ-sl-PI8">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KXD-zZ-Udk" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Order" id="YwY-Uq-lnA" customClass="PlaceOrderVC" customModule="To_Go" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UZN-B2-aMd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
@@ -826,6 +825,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" red="0.61176470589999998" green="0.53333333329999999" blue="0.49803921569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="1a7-KC-GAG" firstAttribute="top" secondItem="Lil-68-s6g" secondAttribute="top" id="8M8-ml-RZV"/>
                                     <constraint firstAttribute="bottom" secondItem="1a7-KC-GAG" secondAttribute="bottom" id="CJn-ba-hW6"/>
@@ -853,6 +853,7 @@
                         <outlet property="selectPickupTimeTextField" destination="gPX-jK-ttL" id="z6x-Gv-PZt"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KXD-zZ-Udk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4728.8000000000002" y="91.625615763546804"/>
         </scene>
@@ -1025,7 +1026,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AyP-WC-Ypr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4729" y="863"/>
+            <point key="canvasLocation" x="4729" y="814"/>
         </scene>
         <!--Extras-->
         <scene sceneID="ahm-dw-PeH">
