--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HBd-66-iA8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1237,7 +1237,7 @@
                                             <outlet property="menuItemName" destination="6db-2P-r1H" id="fuz-ps-fJT"/>
                                             <outlet property="menuItemPrice" destination="Fg1-OI-wy8" id="Tur-xg-R3H"/>
                                             <outlet property="menuItemSize" destination="eZk-vi-KbZ" id="ktw-yk-Kzf"/>
-                                            <segue destination="faq-Sn-ZeY" kind="show" id="BWY-rC-I8M"/>
+                                            <segue destination="faq-Sn-ZeY" kind="show" identifier="addExtras" id="BWY-rC-I8M"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1251,9 +1251,6 @@
                                         <state key="normal" title="View Order">
                                             <color key="titleColor" red="0.28627450980392155" green="0.28627450980392155" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <connections>
-                                            <segue destination="HBd-66-iA8" kind="show" id="utB-Mu-CEE"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1282,11 +1279,12 @@
                         <outlet property="selectItemTableView" destination="GhI-YE-6RM" id="tR5-cs-JT4"/>
                         <outlet property="viewOrderBtn" destination="2ZJ-gp-Qqt" id="9Wg-m6-BT4"/>
                         <outlet property="viewOrderView" destination="xtg-yI-J46" id="V1f-fa-JL4"/>
+                        <segue destination="HBd-66-iA8" kind="show" identifier="basket" id="MCJ-Af-rSz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WDY-kI-ZIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3645.5999999999999" y="-656.1576354679803"/>
+            <point key="canvasLocation" x="3646" y="-680"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
